--- a/app/index.html
+++ b/app/index.html
@@ -91,6 +91,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
             <iron-icon icon="mail"></iron-icon>
             <span>Contact</span>
           </a>
+
+          <a data-route="books" href="{{baseUrl}}books">
+            <iron-icon icon="book"></iron-icon>
+            <span>Books</span>
+          </a>
         </paper-menu>
       </paper-scroll-header-panel>
 
@@ -176,6 +181,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
               <paper-material elevation="1">
                 <h1 class="page-title" tabindex="-1">Contact</h1>
                 <p>This is the contact section</p>
+              </paper-material>
+            </section>
+
+            <section data-route="books" tabindex="-1">
+              <paper-material elevation="1">
+                <h1 class="page-title" tabindex="-1">Books</h1>
+                <p>This is the books section</p>
               </paper-material>
             </section>
           </iron-pages>
