--- a/app/index.html
+++ b/app/index.html
@@ -116,9 +116,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         </script>
     </dom-module>
     <firebase-collection
-      start-at="0"
-      order-by-key
-      limit-to-first="1000"
       location="https://agilemeter.firebaseio.com/questions"
       data="{{questions}}"></firebase-collection>
     <paper-drawer-panel id="paperDrawerPanel">
@@ -167,7 +164,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
           <span class="space"></span>
 
           <!-- Toolbar icons -->
-          <paper-icon-button icon="refresh"></paper-icon-button>
+          <!--<paper-icon-button icon="refresh"></paper-icon-button>-->
 
           <!-- Application name -->
           <div class="middle middle-container">
@@ -184,7 +181,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         <div class="content">
           <iron-pages attr-for-selected="data-route" selected="{{route}}">
             <section data-route="home" tabindex="-1">
-              <template is="dom-repeat" items="[[questions]]" as="question" filter="_isQuestion">
+              <template is="dom-repeat" items="[[questions]]" as="question" filter="_isQuestion" sort="_computeSort">
                   <paper-material elevation="1">
                     <div class="card-content">
                       <p>[[question.question]]</p>
