[ADD] Local mode

--- a/app/index.html
+++ b/app/index.html
@@ -120,7 +120,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       data="{{questions}}"></firebase-collection>-->
     <iron-ajax
       auto
-      url="db/questions.json"
+      url="questions.json"
       params='{"alt":"json", "q":"chrome"}'
       handle-as="json"
       on-response="handleResponse"
