--- a/app/styles/app-theme.html
+++ b/app/styles/app-theme.html
@@ -25,6 +25,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
   /* Application theme */
 
+  .paper-toolbar-0 {
+    background: #F44336;
+  }
+
+.paper-menu-0 .selectable-content.paper-menu > .iron-selected {
+      background-color: #F17269;
+}
+
+paper-card {
+    margin-bottom: 10px;
+    max-width: 540px;
+  }
+
+paper-card.question {
+  width: 100%;
+  max-width: auto;
+}
+
+.paper-button-0 { min-width: 4em; }
+
+.paper-menu-0 .selectable-content.paper-menu > *:focus:after {
+  background: gray;
+}
+
   :root {
     --primary-text-color: var(--paper-grey-900);
     --primary-background-color: #ffffff;
