--- a/app/elements/routing.html
+++ b/app/elements/routing.html
@@ -67,8 +67,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       setFocus(app.route);
     });
 
-    page('/profile', function() {
-      app.route = 'profile';
+    page('/stats', function() {
+      app.route = 'stats';
       setFocus(app.route);
     });
 
